--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.2.0 (2021-08-30)
+--------------------------
+Update to use Postgres Loader v0.3.1 (#6)
+Leverage CloudWatch Logs as default (#8)
+
 Version 0.1.1 (2021-08-12)
 --------------------------
 Update License badge to use HTTPS (#1)
