--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 0.3.0 (2023-01-16)
+--------------------------
+Increase memory allocation for application (#9)
+Bump version to 0.3.3 (#10)
+
 Version 0.2.0 (2021-08-30)
 --------------------------
 Update to use Postgres Loader v0.3.1 (#6)
