--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.4.0 (2023-02-28)
+--------------------------
+Use service module and leverage IMDSv2 (#12)
+
 Version 0.3.0 (2023-01-16)
 --------------------------
 Increase memory allocation for application (#9)
