--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.4.1 (2023-03-08)
+--------------------------
+Bump service module to v0.1.1 (#14)
+
 Version 0.4.0 (2023-02-28)
 --------------------------
 Use service module and leverage IMDSv2 (#12)
