--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 0.5.0 (2024-02-05)
+--------------------------
+Update LICENSE to SLULA (#19)
+
 Version 0.4.3 (2024-01-16)
 --------------------------
 Bump service module to 0.2.1 (#17)
